fix: optimize README - remove duplicates, fix spacing (1633→341 lines)