@@ -1,1631 +1,340 @@
-<div align="center"># FasalSathi - Agricultural Companion App 🌾# FasalSathi - Agricultural Companion App 🌾
-
-
+<div align="center">
 
 # 🌾 FasalSathi
 
-
-
-### Smart Agricultural Assistant for Farmers in India> **Smart Agricultural Assistant for Farmers in India**> **Smart Agricultural Assistant for Farmers in India**
-
-
+### Smart Agricultural Assistant for Farmers in India
 
 [![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg?style=for-the-badge)](LICENSE)
-
 [![Platform](https://img.shields.io/badge/Platform-Android-green.svg?style=for-the-badge&logo=android)](https://developer.android.com/)
-
-[![Kotlin](https://img.shields.io/badge/Kotlin-1.9.10-blue.svg?style=for-the-badge&logo=kotlin)](https://kotlinlang.org/)[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](LICENSE)[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](LICENSE)
-
+[![Kotlin](https://img.shields.io/badge/Kotlin-1.9.10-blue.svg?style=for-the-badge&logo=kotlin)](https://kotlinlang.org/)
 [![Python](https://img.shields.io/badge/Python-3.8+-blue.svg?style=for-the-badge&logo=python)](https://www.python.org/)
 
-[![PRs Welcome](https://img.shields.io/badge/PRs-welcome-brightgreen.svg?style=for-the-badge)](CHANGELOG.md)[![Platform](https://img.shields.io/badge/Platform-Android-green.svg)](https://developer.android.com/)[![Platform](https://img.shields.io/badge/Platform-Android-green.svg)](https://developer.android.com/)
-
-
-
-<img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&weight=600&size=28&duration=4000&pause=1000&color=2E7D32&center=true&vCenter=true&width=600&lines=Empowering+Farmers+with+Technology;AI-Powered+Crop+Recommendations;Real-time+Weather+Insights;Smart+Farming+Solutions" alt="Typing SVG" />[![Kotlin](https://img.shields.io/badge/Kotlin-1.9.10-blue.svg)](https://kotlinlang.org/)[![Kotlin](https://img.shields.io/badge/Kotlin-1.9.10-blue.svg)](https://kotlinlang.org/)
-
-
-
----[![Python](https://img.shields.io/badge/Python-3.8+-blue.svg)](https://www.python.org/)[![Python](https://img.shields.io/badge/Python-3.8+-blue.svg)](https://www.python.org/)
-
-
-
-### 🎯 Mission: Revolutionizing Indian Agriculture through Technology
-
-
-
-<p align="center">FasalSathi is a comprehensive Android application designed to empower farmers with modern technology, providing weather information, AI-powered agricultural guidance, and smart farming recommendations.FasalSathi is a comprehensive Android application designed to empower farmers with modern technology, providing weather information, AI-powered agricultural guidance, and smart farming recommendations.
-
-  <img src="https://img.shields.io/badge/🌱-Crop_Recommendations-4CAF50?style=for-the-badge" />
-
-  <img src="https://img.shields.io/badge/🌤️-Weather_Forecasting-2196F3?style=for-the-badge" />
-
-  <img src="https://img.shields.io/badge/🤖-AI_Assistant-9C27B0?style=for-the-badge" />
-
-  <img src="https://img.shields.io/badge/🏛️-Govt_Schemes-FF9800?style=for-the-badge" />---## 📚 Documentation
-
-</p>
-
-
+<img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&weight=600&size=28&duration=4000&pause=1000&color=2E7D32&center=true&vCenter=true&width=600&lines=Empowering+Farmers+with+Technology;AI-Powered+Crop+Recommendations;Real-time+Weather+Insights;Smart+Farming+Solutions" alt="Typing SVG" />
 
 </div>
-
-## 📋 Table of Contents- **[Quick Start Guide](QUICK_START.md)** - Get started in 5 minutes
 
 ---
 
-- [Features](#-features)- **[Contributing Guidelines](CONTRIBUTING.md)** - How to contribute
-
-## 📑 Quick Navigation
-
-- [Technical Stack](#️-technical-stack)- **[ML Pipeline Guide](ml_pipeline/README_ML.md)** - ML models documentation
+## 📋 Quick Navigation
 
 <table>
-
-<tr>- [Quick Start](#-quick-start)- **[Cleanup Summary](CLEANUP_SUMMARY.md)** - Repository cleanup details
-
-<td width="33%" align="center">
-
-- [Project Structure](#-project-structure)- **[Changelog](CHANGELOG.md)** - Version history
-
-### 🚀 [Get Started](#-quick-start)
-
-Setup in 5 minutes- [Building the App](#-building-the-app)
-
-
-
-</td>- [ML Pipeline](#-ml-pipeline)## 🌟 Features
-
-<td width="33%" align="center">
-
-- [Testing](#-testing)
-
-### 📱 [Features](#-features)
-
-Explore capabilities- [Contributing](#-contributing)### 📱 Core Functionality
-
-
-
-</td>- [Troubleshooting](#-troubleshooting)- **Dashboard Overview**: Clean, intuitive interface with quick access to all features
-
-<td width="33%" align="center">
-
-- [License](#-license)- **User Profile Management**: Personalized farmer profiles with location-based services
-
-### 🤖 [ML Pipeline](#-ml-pipeline)
-
-95% accurate models- **Multi-language Support**: Available in multiple Indian languages
-
-
-
-</td>---
-
-</tr>
-
-<tr>### 🌤️ Weather Integration
-
-<td width="33%" align="center">
-
-## 🌟 Features- **Real-time Weather Data**: Integration with OpenWeatherMap API
-
-### 🔨 [Build](#-building-the-app)
-
-Android & Python- **Location-based Forecasting**: Weather information for 200+ Indian cities
-
-
-
-</td>### 📱 Core Functionality- **Agricultural Weather Insights**: Farming recommendations based on weather conditions
-
-<td width="33%" align="center">
-
-- **Dashboard Overview**: Clean, intuitive interface with quick access to all features- **Enhanced Simulation**: Fallback system with realistic weather data
-
-### 🤝 [Contribute](#-contributing)
-
-Join our community- **User Profile Management**: Personalized farmer profiles with location-based services
-
-
-
-</td>- **Multi-language Support**: Available in multiple Indian languages### 🤖 AI-Powered FAQ Assistant
-
-<td width="33%" align="center">
-
-- **Voice Recognition**: Ask questions using voice input
-
-### 🐛 [Debug](#-troubleshooting)
-
-Fix common issues### 🌤️ Weather Integration- **Image Analysis**: Upload crop photos for AI-powered analysis
-
-
-
-</td>- **Real-time Weather Data**: Integration with OpenWeatherMap API- **Text-to-Speech**: Listen to AI responses
-
-</tr>
-
-</table>- **Location-based Forecasting**: Weather information for 200+ Indian cities- **Chat Interface**: Interactive conversation with agricultural AI assistant
-
-
-
----- **Agricultural Weather Insights**: Farming recommendations based on weather conditions- **Multilingual Support**: Questions and answers in local languages
-
-
-
-## 🌟 Features- **Enhanced Simulation**: Fallback system with realistic weather data
-
-
-
-<details open>### 🏛️ Government Schemes
-
-<summary><b>📱 Core Functionality</b> - Tap to expand</summary>
-
-<br>### 🤖 AI-Powered FAQ Assistant- **Scheme Information**: Access to various agricultural government schemes
-
-
-
-| Feature | Description | Status |- **Voice Recognition**: Ask questions using voice input- **Eligibility Checker**: Check eligibility for different programs
-
-|---------|-------------|--------|
-
-| 🎨 **Modern Dashboard** | Material Design 3 with intuitive navigation | ✅ Live |- **Image Analysis**: Upload crop photos for AI-powered analysis- **Application Guidance**: Step-by-step application process help
-
-| 👤 **User Profiles** | Personalized farmer accounts with location services | ✅ Live |
-
-| 🌍 **Multi-language** | Hindi, English, Marathi, Gujarati & more | ✅ Live |- **Text-to-Speech**: Listen to AI responses
-
-| 🔔 **Smart Notifications** | Weather alerts & farming reminders | 🚧 Coming Soon |
-
-- **Chat Interface**: Interactive conversation with agricultural AI assistant## 🛠️ Technical Stack
-
-</details>
-
-- **Multilingual Support**: Questions and answers in local languages
-
-<details open>
-
-<summary><b>🌤️ Weather Intelligence</b> - Real-time data powered</summary>### Mobile Development
-
-<br>
-
-### 🌾 Crop Recommendation System- **Language**: Kotlin
-
-```mermaid
-
-graph LR- **ML-based Predictions**: Recommends optimal crops based on soil and environmental conditions- **Platform**: Android (API 21+)
-
-    A[📍 User Location] --> B[🌐 OpenWeather API]
-
-    B --> C[☁️ Real-time Data]- **Soil Analysis**: Advanced soil type detection using machine learning- **Architecture**: MVVM with Clean Architecture
-
-    C --> D[🌾 Farm Recommendations]
-
-    B --> E[💾 Fallback System]- **95% Accuracy**: Trained on comprehensive agricultural datasets- **UI Framework**: Material Design 3
-
-    E --> D
-
-    D --> F[👨‍🌾 Farmer]- **Database**: Room (SQLite)
-
-```
-
-### 🏛️ Government Schemes
-
-- ✅ **200+ Indian Cities** covered with precise coordinates
-
-- ✅ **Real-time Updates** every 30 minutes- **Scheme Information**: Access to various agricultural government schemes### AI & Machine Learning
-
-- ✅ **7-Day Forecast** with hourly breakdowns
-
-- ✅ **Agricultural Insights** based on weather patterns- **Eligibility Checker**: Check eligibility for different programs- **Voice Recognition**: Android Speech Recognition API
-
-- ✅ **Offline Mode** with realistic simulation
-
-- **Application Guidance**: Step-by-step application process help- **Text-to-Speech**: Android TTS Engine
-
-</details>
-
-- **Image Analysis**: Custom AI models for crop analysis
-
-<details open>
-
-<summary><b>🤖 AI-Powered Assistant</b> - Your farming companion</summary>---- **Natural Language Processing**: For multilingual support
-
-<br>
-
-
-
-<div align="center">
-
-## 🛠️ Technical Stack### APIs & Services
-
-| Voice 🎤 | Image 📸 | Text 💬 | Speech 🔊 |
-
-|:-------:|:-------:|:-------:|:--------:|- **Weather API**: OpenWeatherMap integration
-
-| Ask questions using voice | Upload crop photos | Chat interface | Listen to responses |
-
-| ✅ Available | ✅ Available | ✅ Available | ✅ Available |### Mobile Development- **Location Services**: GPS and network-based location
-
-
-
-</div>- **Language**: Kotlin 1.9.10- **Cloud Storage**: For user data and preferences
-
-
-
-**Capabilities:**- **Platform**: Android (API 21+)
-
-- 🗣️ Natural language processing in Hindi & English
-
-- 📷 Crop disease detection through image analysis- **Architecture**: MVVM with Clean Architecture## 🚀 Getting Started
-
-- 💡 Intelligent farming recommendations
-
-- 🎯 Context-aware responses- **UI Framework**: Material Design 3
-
-
-
-</details>- **Database**: Room (SQLite)### Prerequisites
-
-
-
-<details>- **Build Tool**: Gradle 8.1.2- Android Studio Arctic Fox or later
-
-<summary><b>🌾 ML-Based Crop Recommendation</b> - 95% Accuracy</summary>
-
-<br>- Android SDK (API 21 or higher)
-
-
-
-```python### AI & Machine Learning- Kotlin 1.9+
-
-# Example: Get crop recommendation
-
-predictor = CropPredictor()- **ML Framework**: scikit-learn, TensorFlow- Internet connection for weather data
-
-result = predictor.recommend({
-
-    'N': 90, 'P': 42, 'K': 43,- **Models**: Random Forest (Crop), Gradient Boosting (Soil)
-
-    'pH': 6.5, 'temperature': 25,
-
-    'humidity': 70, 'rainfall': 800- **Voice Recognition**: Android Speech Recognition API### Installation
-
-})
-
-# Output: "Rice (95.2% confidence)"- **Text-to-Speech**: Android TTS Engine
-
-```
-
-- **Image Processing**: OpenCV, Pillow1. **Clone the Repository**
-
-**Smart Features:**
-
-- 🎯 Soil nutrient analysis (N, P, K, pH, EC, OC)   ```bash
-
-- 🌡️ Environmental factor consideration (temp, humidity, rainfall)
-
-- 🗺️ Region-specific recommendations### APIs & Services   git clone https://github.com/AnuranjanJain/FasalSathi.git
-
-- 📊 Confidence scores for each prediction
-
-- 📈 Historical yield data integration- **Weather API**: OpenWeatherMap integration   cd FasalSathi
-
-
-
-</details>- **Location Services**: GPS and network-based location   ```
-
-
-
-<details>- **Firebase**: Cloud storage and analytics
-
-<summary><b>🏛️ Government Schemes</b> - One-stop information</summary>
-
-<br>2. **Open in Android Studio**
-
-
-
-- PM-KISAN eligibility checker---   - Open Android Studio
-
-- Crop insurance schemes
-
-- Subsidies & loans information   - Select "Open an existing project"
-
-- Application tracking system
-
-- Document upload assistance## 🚀 Quick Start   - Navigate to the cloned directory
-
-
-
-</details>   - Wait for Gradle sync to complete
-
-
-
----### Prerequisites
-
-
-
-## 🛠️ Technology Stack- **Android Studio** Arctic Fox or later3. **Configure API Keys** (Optional - Has fallback simulation)
-
-
-
-<div align="center">- **JDK** 8 or higher   
-
-
-
-### Mobile Development- **Python** 3.8+ (for ML development)   The app includes a realistic weather simulation system, so API keys are optional.
-
-<img src="https://skillicons.dev/icons?i=kotlin,androidstudio,gradle,firebase" />
-
-- **Git** for version control   
-
-### Machine Learning & Backend
-
-<img src="https://skillicons.dev/icons?i=python,tensorflow,sklearn,opencv" />   If you want to use real weather data:
-
-
-
-### Development Tools### 5-Minute Setup (Android App)   - Get a free API key from [OpenWeather](https://openweathermap.org/api)
-
-<img src="https://skillicons.dev/icons?i=git,github,vscode,linux" />
-
-   - Update in your local configuration (not committed to repo)
-
-</div>
-
-1. **Clone the repository**
-
-<br>
-
-   ```bash4. **Build and Run**
-
-<table>
-
-<tr>   git clone https://github.com/AnuranjanJain/FasalSathi.git   ```bash
-
-<td width="50%">
-
-   cd FasalSathi   # Using Gradle
-
-### 📱 Frontend
-
-- **Language:** Kotlin 1.9.10   ```   ./gradlew assembleDebug
-
-- **UI:** Material Design 3
-
-- **Architecture:** MVVM + Clean   
-
-- **Database:** Room (SQLite)
-
-- **Min SDK:** API 21 (Android 5.0)2. **Open in Android Studio**   # Or use Android Studio's Run button (Shift+F10)
-
-
-
-</td>   - Launch Android Studio   ```
-
-<td width="50%">
-
-   - File → Open → Select the `FasalSathi` folder
-
-### 🤖 Backend & ML
-
-- **ML Framework:** scikit-learn, TensorFlow   - Wait for Gradle sync (2-3 minutes)5. **Set Up ML Models (Optional)**
-
-- **Models:** Random Forest, Gradient Boosting
-
-- **Accuracy:** 95% (Crop), 92% (Soil)   
-
-- **APIs:** OpenWeatherMap, Firebase
-
-- **Image Processing:** OpenCV, Pillow3. **Build and Run**   Pre-trained models are included. To retrain:
-
-
-
-</td>   ```bash   ```bash
-
-</tr>
-
-</table>   # Using build script   # Create virtual environment
-
-
-
----   ./build.sh -i   python3 -m venv venv
-
-
-
-## 🚀 Quick Start      source venv/bin/activate  # On Windows: venv\Scripts\activate
-
-
-
-### ⚡ One-Command Setup   # Or using Gradle directly   
-
-
-
-```bash   ./gradlew assembleDebug   # Install dependencies
-
-# Clone the repository
-
-git clone https://github.com/AnuranjanJain/FasalSathi.git      pip install -r requirements.txt
-
-cd FasalSathi
-
-   # Or use Android Studio's Run button (Shift+F10)   
-
-# For Android Development
-
-./build.sh -i  # Build & install on connected device   ```   # Train models
-
-
-
-# For ML Development   python ml_pipeline/train_models.py
-
-./setup_ml.sh  # Automated Python environment setup
-
-```### ML Pipeline Setup   ```
-
-
-
-<details>
-
-<summary><b>📱 Detailed Android Setup</b></summary>
-
-1. **Automated Setup** (Recommended)## 📁 Project Structure
-
-#### Prerequisites
-
-- ✅ Android Studio Arctic Fox or later   ```bash
-
-- ✅ JDK 8+
-
-- ✅ Android SDK (API 21+)   ./setup_ml.sh```
-
-
-
-#### Steps   ```SIH25/
-
-
-
-1️⃣ **Open in Android Studio**├── app/                          # Android application
-
-```bash
-
-# Launch Android Studio2. **Manual Setup**│   ├── build.gradle.kts          # App-level build configuration
-
-# File → Open → Select FasalSathi folder
-
-# Wait for Gradle sync (2-3 minutes)   ```bash│   ├── google-services.json      # Firebase configuration
-
-```
-
-   # Create virtual environment│   └── src/
-
-2️⃣ **Build & Run**
-
-```bash   python3 -m venv venv│       ├── main/
-
-# Option 1: Using build script
-
-./build.sh -i   source venv/bin/activate  # Linux/Mac│       │   ├── AndroidManifest.xml
-
-
-
-# Option 2: Using Gradle   # venv\Scripts\activate   # Windows│       │   ├── java/com/fasalsaathi/app/
-
-./gradlew assembleDebug
-
-   │       │   │   ├── FasalSaathiApplication.kt
-
-# Option 3: Android Studio
-
-# Press Shift+F10 or click Run ▶️   # Install dependencies│       │   │   ├── ui/          # UI components (Activities, Fragments)
-
-```
-
-   pip install -r requirements.txt│       │   │   ├── data/        # Data layer (Repository, DAO, Entities)
-
-3️⃣ **Install on Device**
-
-```bash   │       │   │   ├── ml/          # ML model integration
-
-# Via ADB
-
-adb install -r app/build/outputs/apk/debug/app-debug.apk   # Train models (optional - pre-trained models included)│       │   │   ├── weather/     # Weather service
-
-
-
-# Or use our script   python ml_pipeline/train_models.py│       │   │   └── utils/       # Utility classes
-
-./build.sh -c -i  # Clean, build & install
-
-```   ```│       │   └── res/
-
-
-
-</details>│       │       ├── layout/      # XML layouts
-
-
-
-<details>---│       │       ├── values/      # Strings, colors, themes
-
-<summary><b>🐍 Detailed Python/ML Setup</b></summary>
-
-│       │       ├── drawable/    # Images and icons
-
-#### Prerequisites
-
-- ✅ Python 3.8+## 📁 Project Structure│       │       └── mipmap/      # App icons
-
-- ✅ pip package manager
-
-- ✅ 2GB free space (for models)│       ├── test/                # Unit tests
-
-
-
-#### Automated Setup```│       └── androidTest/         # Instrumentation tests
-
-```bash
-
-./setup_ml.sh  # Handles everything!FasalSathi/├── ml_pipeline/                  # Machine Learning Pipeline
-
-```
-
-├── app/                          # Android application│   ├── train_models.py          # Model training script
-
-#### Manual Setup
-
-```bash│   ├── build.gradle.kts          # App-level build configuration│   ├── deploy_models.py         # Model deployment utilities
-
-# 1. Create virtual environment
-
-python3 -m venv venv│   ├── google-services.json      # Firebase configuration│   ├── fixed_predictor.py       # Production predictor
-
-
-
-# 2. Activate it│   └── src/│   ├── requirements.txt         # Python dependencies
-
-source venv/bin/activate  # Linux/Mac
-
-# venv\Scripts\activate   # Windows│       ├── main/│   ├── models/                  # Trained ML models (484MB+)
-
-
-
-# 3. Install dependencies│       │   ├── AndroidManifest.xml│   │   ├── crop_recommendation_model.joblib
-
-pip install -r requirements.txt
-
-│       │   ├── java/com/fasalsaathi/app/│   │   ├── soil_type_model.joblib
-
-# 4. Train models (optional - pre-trained included)
-
-python ml_pipeline/train_models.py│       │   │   ├── FasalSaathiApplication.kt│   │   └── model_metadata.json
-
-```
-
-│       │   │   ├── ui/          # UI components (Activities, Fragments)│   └── android_integration/     # Android ML integration
-
-#### Verify Installation
-
-```bash│       │   │   ├── data/        # Data layer (Repository, DAO, Entities)│       ├── MLPredictor.java
-
-python -c "from ml_pipeline.fixed_predictor import FixedModelPredictor; print('✅ Setup successful!')"
-
-```│       │   │   ├── ml/          # ML model integration│       └── model_config.json
-
-
-
-</details>│       │   │   ├── weather/     # Weather service├── Datasets/                     # Training datasets
-
-
-
----│       │   │   └── utils/       # Utility classes│   ├── MASTER_DATASET_INDEX.csv
-
-
-
-## 📁 Project Architecture│       │   └── res/             # Resources (layouts, strings, drawables)│   ├── ml_soil_health_dataset.csv
-
-
-
-<details>│       ├── test/                # Unit tests│   ├── realistic_crop_soil_dataset.csv
-
-<summary><b>🗂️ Click to view directory structure</b></summary>
-
-│       └── androidTest/         # Instrumentation tests│   └── sample_soil_health_card_data.csv
-
-```
-
-FasalSathi/│├── gradle/                       # Gradle wrapper files
-
-│
-
-├── 📱 app/                          # Android Application├── ml_pipeline/                  # Machine Learning Pipeline├── build.gradle.kts             # Project-level build configuration
-
-│   ├── build.gradle.kts            # App-level configuration
-
-│   └── src/│   ├── train_models.py          # Model training script├── settings.gradle.kts          # Gradle settings
-
-│       ├── main/
-
-│       │   ├── java/com/fasalsaathi/app/│   ├── deploy_models.py         # Model deployment utilities├── requirements.txt             # Python dependencies (root)
-
-│       │   │   ├── 🎨 ui/         # Activities, Fragments
-
-│       │   │   ├── 💾 data/       # Repository, DAO, Entities│   ├── fixed_predictor.py       # Production predictor├── README.md                    # This file
-
-│       │   │   ├── 🤖 ml/         # ML model integration
-
-│       │   │   ├── 🌤️ weather/    # Weather service│   ├── requirements.txt         # Python dependencies├── CHANGELOG.md                 # Version history
-
-│       │   │   └── 🔧 utils/      # Helper classes
-
-│       │   └── res/                # Resources│   ├── models/                  # Trained ML models└── LICENSE                      # MIT License
-
-│       ├── 🧪 test/                # Unit tests
-
-│       └── 🔬 androidTest/         # Integration tests│   │   ├── crop_recommendation_model.joblib  # 484MB│       │       │   ├── colors.xml
-
-│
-
-├── 🤖 ml_pipeline/                  # Machine Learning│   │   ├── soil_type_model.joblib            # 32MB│       │       │   ├── strings.xml
-
-│   ├── 📊 train_models.py          # Model training
-
-│   ├── 🚀 deploy_models.py         # Deployment utilities│   │   └── model_metadata.json│       │       │   └── themes.xml
-
-│   ├── 🎯 fixed_predictor.py       # Production predictor
-
-│   ├── 📦 models/                  # Trained models (516MB)│   └── android_integration/     # Android ML integration│       │       ├── values-night/
-
-│   └── 🔌 android_integration/     # Java bridge
-
-││       ├── MLPredictor.java│       │       │   └── themes.xml
-
-├── 📊 Datasets/                     # Training data
-
-├── 🔧 build.sh                      # Build automation│       └── model_config.json│       │       └── xml/
-
-├── 🐍 setup_ml.sh                   # ML setup
-
-├── 📚 README.md                     # This file││       │           ├── backup_rules.xml
-
-└── 📝 CHANGELOG.md                  # Version history
-
-```├── Datasets/                     # Training datasets│       │           └── data_extraction_rules.xml
-
-
-
-</details>│   ├── MASTER_DATASET_INDEX.csv│       ├── test/
-
-
-
----│   ├── ml_soil_health_dataset.csv│       │   └── java/com/example/myandroidapp/
-
-
-
-## 🔨 Building the App│   ├── realistic_crop_soil_dataset.csv│       │       └── ExampleUnitTest.kt
-
-
-
-### 🎯 Quick Build Commands│   └── sample_soil_health_card_data.csv│       └── androidTest/
-
-
-
-<table>││           └── java/com/example/myandroidapp/
-
 <tr>
-
-<th>Command</th>├── gradle/                       # Gradle wrapper files│               └── ExampleInstrumentedTest.kt
-
-<th>Description</th>
-
-<th>Output</th>├── build.gradle.kts             # Project-level build configuration├── build.gradle.kts              # Project-level build configuration
-
+<td width="25%" align="center"><b>🚀 <a href="#-quick-start">Get Started</a></b><br/>Setup in 5 minutes</td>
+<td width="25%" align="center"><b>🌟 <a href="#-features">Features</a></b><br/>What we offer</td>
+<td width="25%" align="center"><b>🤖 <a href="#-ml-models">ML Models</a></b><br/>95% accurate AI</td>
+<td width="25%" align="center"><b>🤝 <a href="#-contributing">Contribute</a></b><br/>Join the team</td>
 </tr>
-
-<tr>├── settings.gradle.kts          # Gradle settings├── gradle.properties             # Gradle properties
-
-<td><code>./build.sh</code></td>
-
-<td>Build debug APK</td>├── requirements.txt             # Python dependencies (root)├── settings.gradle.kts           # Gradle settings
-
-<td>app/build/outputs/apk/debug/</td>
-
-</tr>├── build.sh                     # Automated build script└── gradlew                       # Gradle wrapper script
-
-<tr>
-
-<td><code>./build.sh -i</code></td>├── setup_ml.sh                  # ML setup script```
-
-<td>Build & install</td>
-
-<td>Installs on connected device</td>├── README.md                    # This file
-
-</tr>
-
-<tr>├── CHANGELOG.md                 # Version history## Prerequisites
-
-<td><code>./build.sh -r</code></td>
-
-<td>Build release APK</td>└── LICENSE                      # MIT License
-
-<td>app/build/outputs/apk/release/</td>
-
-</tr>```- Java Development Kit (JDK) 8 or higher
-
-<tr>
-
-<td><code>./build.sh -c</code></td>- Android SDK
-
-<td>Clean build</td>
-
-<td>Removes old artifacts</td>---- Android Studio or VS Code with Android extensions
-
-</tr>
-
 </table>
 
+---
 
+## 🌟 Features
 
-### 🔧 Advanced Build Options## 🔨 Building the App## Building the Project
+### 📱 Core Functionality
+- **Modern Dashboard** - Material Design 3 interface with quick access to all features
+- **User Profiles** - Personalized farmer accounts with location-based services
+- **Multi-language** - Hindi, English, Marathi, Gujarati & more
 
+### 🌤️ Weather Intelligence
+- **Real-time Data** - Integration with OpenWeatherMap API for 200+ Indian cities
+- **7-Day Forecast** - Hourly weather breakdowns with farming recommendations
+- **Offline Mode** - Realistic simulation when internet unavailable
 
+### 🤖 AI Assistant
+- **Voice Recognition** - Ask farming questions using voice
+- **Image Analysis** - Upload crop photos for AI-powered diagnosis
+- **Text-to-Speech** - Listen to responses in local languages
+- **Smart Chat** - Interactive conversation for agricultural queries
+
+### 🌾 ML Crop Recommendation
+- **95% Accurate** - AI-based crop recommendations using soil & environmental data
+- **Soil Analysis** - Advanced soil type detection with 92% accuracy
+- **Smart Suggestions** - Region-specific recommendations with confidence scores
+
+### 🏛️ Government Schemes
+- **Scheme Database** - Access agricultural government programs
+- **Eligibility Check** - Verify eligibility for different schemes
+- **Application Guide** - Step-by-step help with applications
+
+---
+
+## ��️ Tech Stack
+
+<div align="center">
+
+<img src="https://skillicons.dev/icons?i=kotlin,androidstudio,python,tensorflow,sklearn,firebase,git" />
+
+</div>
+
+<br/>
+
+| **Mobile** | **Machine Learning** | **Backend** |
+|------------|---------------------|-------------|
+| Kotlin 1.9.10 | Random Forest (95% accuracy) | OpenWeatherMap API |
+| Material Design 3 | Gradient Boosting (92% accuracy) | Firebase |
+| Room Database | TensorFlow + scikit-learn | RESTful APIs |
+| MVVM Architecture | OpenCV Image Processing | Cloud Storage |
+
+---
+
+## 🚀 Quick Start
+
+### ⚡ One-Command Setup
 
 ```bash
+# Clone repository
+git clone https://github.com/AnuranjanJain/FasalSathi.git
+cd FasalSathi
 
-# Full clean build and install
-
-./build.sh -c -i### Using Build Script (Recommended)To build the project:
-
-
-
-# Release build with signing
-
-./build.sh -r --sign
-
-```bash```bash
-
-# Generate APK for multiple architectures
-
-./gradlew assembleRelease# Build debug APK./gradlew build
-
-
-
-# Build with profiling./build.sh```
-
-./gradlew assembleDebug --profile
-
-```
-
-
-
-<details># Build and install on connected deviceTo build a debug APK:
-
-<summary><b>⚙️ Gradle Configuration Tips</b></summary>
-
+# For Android Development
 ./build.sh -i
 
-Add to `gradle.properties` for faster builds:
-
-```bash
-
-```properties
-
-org.gradle.daemon=true# Build release APK./gradlew assembleDebug
-
-org.gradle.parallel=true
-
-org.gradle.caching=true./build.sh -r```
-
-org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=512m
-
-kotlin.incremental=true
-
+# For ML Development  
+./setup_ml.sh
 ```
 
-# Clean buildTo build a release APK:
+### 📱 Android Setup
+
+<details>
+<summary><b>Click to expand detailed steps</b></summary>
+
+**Prerequisites:** Android Studio, JDK 8+, Android SDK (API 21+)
+
+1. **Open in Android Studio**
+   - File → Open → Select FasalSathi folder
+   - Wait for Gradle sync
+
+2. **Build & Run**
+   ```bash
+   ./build.sh -i              # Build and install
+   ./gradlew assembleDebug    # Build only
+   ```
+
+3. **Run in Android Studio**
+   - Press `Shift+F10` or click Run ▶️
 
 </details>
 
-./build.sh -c
+### 🐍 ML Pipeline Setup
+
+<details>
+<summary><b>Click to expand detailed steps</b></summary>
+
+**Prerequisites:** Python 3.8+, pip
+
+1. **Automated Setup** (Recommended)
+   ```bash
+   ./setup_ml.sh
+   ```
+
+2. **Manual Setup**
+   ```bash
+   python3 -m venv venv
+   source venv/bin/activate          # Linux/Mac
+   # venv\Scripts\activate           # Windows
+   pip install -r requirements.txt
+   python ml_pipeline/train_models.py
+   ```
+
+</details>
 
 ---
 
-```bash
+## 🤖 ML Models
 
-## 🤖 ML Pipeline
+| Model | Type | Accuracy | Speed | Size |
+|-------|------|----------|-------|------|
+| 🌾 Crop Recommendation | Random Forest | 95.2% | <100ms | 484 MB |
+| 🏔️ Soil Detection | Gradient Boosting | 92.1% | <50ms | 32 MB |
+| 📸 Image Classifier | CNN (TensorFlow) | 89.5% | <200ms | 116 MB |
 
-# Clean, build, and install./gradlew assembleRelease
+### Quick Test
 
-### 📊 Model Performance
-
-./build.sh -c -i```
-
-<div align="center">
-
-```
-
-```mermaid
-
-pie title Model Accuracy Distribution## Running the Project
-
-    "Crop Recommendation: 95%" : 95
-
-    "Error Margin" : 5### Using Gradle Directly
-
-```
-
-To run on an emulator or connected device:
-
-```mermaid
-
-pie title Soil Detection Accuracy```bash
-
-    "Soil Type Classification: 92%" : 92
-
-    "Error Margin" : 8# Debug build```bash
-
-```
-
-./gradlew assembleDebug./gradlew installDebug
-
-</div>
-
-# Output: app/build/outputs/apk/debug/app-debug.apk```
-
-### 🎯 Available Models
-
-
-
-<table>
-
-<tr># Release build## Project Configuration
-
-<th>Model</th>
-
-<th>Type</th>./gradlew assembleRelease
-
-<th>Accuracy</th>
-
-<th>Size</th># Output: app/build/outputs/apk/release/app-release.apk- **Package Name**: `com.example.myandroidapp`
-
-<th>Speed</th>
-
-</tr>- **Min SDK**: 24 (Android 7.0)
-
-<tr>
-
-<td>🌾 Crop Recommendation</td># Install on device- **Target SDK**: 34 (Android 14)
-
-<td>Random Forest Ensemble</td>
-
-<td>95.2%</td>./gradlew installDebug- **Compile SDK**: 34
-
-<td>484 MB</td>
-
-<td>&lt;100ms</td>
-
-</tr>
-
-<tr># Clean build artifacts## Dependencies
-
-<td>🏔️ Soil Type Detection</td>
-
-<td>Gradient Boosting</td>./gradlew clean
-
-<td>92.1%</td>
-
-<td>32 MB</td>```- AndroidX Core KTX
-
-<td>&lt;50ms</td>
-
-</tr>- AndroidX AppCompat
-
-<tr>
-
-<td>🌡️ Soil Image Classifier</td>### Using Android Studio- Material Design Components
-
-<td>CNN (TensorFlow)</td>
-
-<td>89.5%</td>- ConstraintLayout
-
-<td>116 MB</td>
-
-<td>&lt;200ms</td>1. Click the green "Run" button (▶️) or press `Shift+F10`- JUnit for testing
-
-</tr>
-
-</table>2. Select your device/emulator- Espresso for UI testing
-
-
-
-### 🔬 Input Features3. Build menu → Build APK(s) for APK generation
-
-
-
-<details>## Development
-
-<summary><b>Crop Recommendation Model Inputs</b></summary>
-
----
-
-- **Soil Nutrients:** N (Nitrogen), P (Phosphorus), K (Potassium)
-
-- **Soil Properties:** pH, EC (Electrical Conductivity), OC (Organic Carbon)The main activity is located at `app/src/main/java/com/example/myandroidapp/MainActivity.kt` and displays a simple "Hello World!" message.
-
-- **Micronutrients:** S, Zn, Fe, Cu, Mn, B
-
-- **Environmental:** Temperature, Humidity, Rainfall## 🤖 ML Pipeline
-
-
-
-</details>You can customize the app by:
-
-
-
-### 🚀 Quick Test### Available Models1. Modifying the layout in `app/src/main/res/layout/activity_main.xml`
-
-
-
-```python2. Adding new activities and resources
-
+```python
 from ml_pipeline.fixed_predictor import FixedModelPredictor
 
-#### 1. Crop Recommendation Model3. Updating the app name and package in the configuration files
-
-# Initialize
-
-predictor = FixedModelPredictor("ml_pipeline/models")- **Type**: Random Forest Classifier (Ensemble)4. Adding new dependencies in `app/build.gradle.kts`
-
-- **Accuracy**: ~95% on test set
-
-# Make prediction- **Input Features**: N, P, K, pH, Temperature, Humidity, Rainfall, EC, OC, S, Zn, Fe, Cu, Mn, B
-
-result = predictor.predict_crop({- **Output**: Recommended crop type with confidence score
-
-    'n': 90, 'p': 42, 'k': 43, 'ph': 6.5,- **File**: `crop_recommendation_model.joblib` (484MB)
-
+predictor = FixedModelPredictor("ml_pipeline/models")
+result = predictor.predict_crop({
+    'n': 90, 'p': 42, 'k': 43, 'ph': 6.5,
     'temperature': 25, 'humidity': 70, 'rainfall': 800
+})
 
-})#### 2. Soil Type Detection Model
-
-- **Type**: Gradient Boosting Classifier
-
-print(f"🌾 Crop: {result['crop']}")- **Accuracy**: ~92% on test set
-
-print(f"📊 Confidence: {result['confidence']:.1%}")- **Input**: Soil composition and chemical properties
-
-print(f"💡 Reason: {result['explanation']}")- **Output**: Soil type (Alluvial, Black, Red, Laterite, Desert, Mountain, Arid, Yellow)
-
-```- **File**: `soil_type_model.joblib` (32MB)
-
-
-
----### Training Models
-
-
-
-## 🧪 Testing```bash
-
-# Activate virtual environment
-
-### 📱 Run Testssource venv/bin/activate
-
-
-
-```bash# Train all models
-
-# Unit Testspython ml_pipeline/train_models.py
-
-./gradlew test
-
-# Models will be saved to ml_pipeline/models/
-
-# Integration Tests (requires device)```
-
-./gradlew connectedAndroidTest
-
-### Using the Predictor
-
-# All tests with coverage
-
-./gradlew jacocoTestReport```python
-
-```from ml_pipeline.fixed_predictor import FixedModelPredictor
-
-
-
-### 📊 Test Coverage# Initialize predictor
-
-predictor = FixedModelPredictor(models_path="ml_pipeline/models")
-
-<div align="center">
-
-# Crop recommendation
-
-| Module | Coverage | Status |result = predictor.predict_crop({
-
-|--------|----------|--------|    'n': 90, 'p': 42, 'k': 43, 'ph': 6.5,
-
-| UI Layer | 78% | 🟢 Good |    'temperature': 25, 'humidity': 70, 'rainfall': 800
-
-| Data Layer | 85% | 🟢 Excellent |})
-
-| ML Integration | 92% | 🟢 Excellent |print(f"Recommended crop: {result['crop']}")
-
-| Utils | 88% | 🟢 Good |print(f"Confidence: {result['confidence']:.2%}")
-
+print(f"🌾 Crop: {result['crop']}")
+print(f"📊 Confidence: {result['confidence']:.1%}")
 ```
-
-</div>
-
-### Android Integration
 
 ---
 
-```java
-
-## 🤝 Contributing// In your Android activity
-
-MLPredictor predictor = new MLPredictor(context);
-
-<div align="center">
-
-// Make prediction
-
-### 🌟 We Love Contributors!CropRecommendation result = predictor.recommendCrop(
-
-    n, p, k, ph, temperature, humidity, rainfall
-
-<img src="https://contrib.rocks/image?repo=AnuranjanJain/FasalSathi" />);
+## 📁 Project Structure
 
 ```
-
-</div>
+FasalSathi/
+├── app/                    # Android application (Kotlin)
+│   ├── src/main/          # Source code
+│   │   ├── java/          # Kotlin files (UI, data, ML integration)
+│   │   └── res/           # Resources (layouts, strings, images)
+│   └── src/test/          # Unit & integration tests
+├── ml_pipeline/            # Machine Learning (Python)
+│   ├── train_models.py    # Model training
+│   ├── fixed_predictor.py # Production predictor
+│   └── models/            # Trained models (516 MB)
+├── Datasets/              # Training datasets
+├── build.sh               # Build automation script
+├── setup_ml.sh            # ML setup script
+└── README.md              # This file
+```
 
 ---
 
-### 🚀 Quick Contribution Guide
+## 🔨 Build Commands
+
+```bash
+./build.sh        # Build debug APK
+./build.sh -i     # Build and install on device
+./build.sh -r     # Build release APK
+./build.sh -c     # Clean build
+./gradlew test    # Run tests
+```
+
+---
 
 ## 🧪 Testing
 
 ```bash
+# Unit tests
+./gradlew test
 
-# 1. Fork the repository### Unit Tests
+# Integration tests (requires device)
+./gradlew connectedAndroidTest
 
-# 2. Clone your fork
-
-git clone https://github.com/YOUR_USERNAME/FasalSathi.git```bash
-
-# Run all unit tests
-
-# 3. Create feature branch./gradlew test
-
-git checkout -b feature/amazing-feature
-
-# Run specific test
-
-# 4. Make changes and commit./gradlew test --tests com.fasalsaathi.app.ExampleUnitTest
-
-git commit -m 'feat: add amazing feature'
-
-# Generate test report
-
-# 5. Push to your fork./gradlew test --continue
-
-git push origin feature/amazing-feature# Report: app/build/reports/tests/testDebugUnitTest/index.html
-
+# Test coverage report
+./gradlew jacocoTestReport
 ```
-
-# 6. Open Pull Request 🎉
-
-```### Instrumentation Tests
-
-
-
-### 📝 Commit Convention```bash
-
-# Run on connected device/emulator
-
-We follow [Conventional Commits](https://www.conventionalcommits.org/):./gradlew connectedAndroidTest
-
-
-
-| Type | Description | Example |# Run specific test
-
-|------|-------------|---------|./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.class=com.fasalsaathi.app.ExampleInstrumentedTest
-
-| `feat` | New feature | `feat(weather): add 7-day forecast` |```
-
-| `fix` | Bug fix | `fix(auth): resolve login crash` |
-
-| `docs` | Documentation | `docs: update README with examples` |### Code Coverage
-
-| `style` | Code style | `style: format with ktlint` |
-
-| `refactor` | Code refactoring | `refactor(ml): optimize prediction` |```bash
-
-| `test` | Add tests | `test: add weather service tests` |# Generate coverage report
-
-| `chore` | Maintenance | `chore: update dependencies` |./gradlew jacocoTestReport
-
-# Report: app/build/reports/jacoco/jacocoTestReport/html/index.html
-
-### 🎯 What to Contribute?```
-
-
-
-<table>---
-
-<tr>
-
-<td width="50%">## 🤝 Contributing
-
-
-
-**🐛 Bug Fixes**We welcome contributions! Here's how you can help:
-
-- Check [Issues](https://github.com/AnuranjanJain/FasalSathi/issues)
-
-- Label: `bug`### Getting Started
-
-- Include reproduction steps
-
-1. **Fork the repository**
-
-**✨ New Features**2. **Create a feature branch**
-
-- Discuss in issues first   ```bash
-
-- Follow existing patterns   git checkout -b feature/amazing-feature
-
-- Add tests   ```
-
-3. **Make your changes**
-
-</td>4. **Commit your changes**
-
-<td width="50%">   ```bash
-
-   git commit -m 'feat: add amazing feature'
-
-**📝 Documentation**   ```
-
-- Fix typos5. **Push to your fork**
-
-- Add examples   ```bash
-
-- Improve clarity   git push origin feature/amazing-feature
-
-   ```
-
-**🧪 Tests**6. **Open a Pull Request**
-
-- Increase coverage
-
-- Add edge cases### Code Style Guidelines
-
-- Improve assertions
-
-#### Kotlin
-
-</td>- Follow [Kotlin Coding Conventions](https://kotlinlang.org/docs/coding-conventions.html)
-
-</tr>- Use 4 spaces for indentation
-
-</table>- Maximum line length: 120 characters
-
-- Use meaningful variable and function names
 
 ---
 
-#### Python
+## 🤝 Contributing
 
-## 🐛 Troubleshooting- Follow [PEP 8](https://pep8.org/)
+We welcome contributions! Here's how:
 
-- Use type hints where applicable
+1. **Fork** the repository
+2. **Create** a feature branch: `git checkout -b feature/amazing-feature`
+3. **Commit** changes: `git commit -m 'feat: add amazing feature'`
+4. **Push** to branch: `git push origin feature/amazing-feature`
+5. **Open** a Pull Request
 
-<details>- Document functions with docstrings
+### Commit Convention
 
-<summary><b>❌ Gradle Sync Failed</b></summary>- Maximum line length: 100 characters
-
-
-
-```bash### Commit Message Format
-
-# Clean and rebuild
-
-./gradlew clean```
-
-./gradlew build --refresh-dependenciestype(scope): brief description
-
-
-
-# Nuclear optionDetailed explanation (if needed)
-
-rm -rf .gradle app/build
-
-./gradlew buildFixes #issue_number
-
-``````
-
-
-
-</details>**Types**: `feat`, `fix`, `docs`, `style`, `refactor`, `test`, `chore`
-
-
-
-<details>**Example**:
-
-<summary><b>📱 Device Not Detected</b></summary>```
-
-feat(weather): add 7-day forecast display
-
-```bash
-
-# Check ADBImplements extended weather forecast with daily breakdown.
-
-adb devicesIncludes temperature, precipitation, and wind data.
-
-
-
-# Restart ADB serverFixes #42
-
-adb kill-server```
-
-adb start-server
-
-### What to Contribute
-
-# Enable USB debugging on device
-
-# Settings → Developer Options → USB Debugging- 🐛 **Bug fixes**: Check issues labeled `bug`
-
-```- ✨ **New features**: Discuss in issues first
-
-- 📝 **Documentation**: Improve docs, add examples
-
-</details>- 🎨 **UI/UX**: Design improvements, accessibility
-
-- 🤖 **ML models**: Improve accuracy, add new models
-
-<details>- 🧪 **Tests**: Increase code coverage
-
-<summary><b>🐍 Python Import Errors</b></summary>
+```
+feat: new feature
+fix: bug fix
+docs: documentation
+style: formatting
+refactor: code restructuring
+test: add tests
+chore: maintenance
+```
 
 ---
 
-```bash
-
-# Activate virtual environment first!## 🐛 Troubleshooting
-
-source venv/bin/activate  # Linux/Mac
-
-venv\Scripts\activate     # Windows### Gradle Sync Failed
-
-
-
-# Reinstall dependencies```bash
-
-pip install --upgrade -r requirements.txt# Clean and rebuild
-
-```./gradlew clean
-
-./gradlew build --refresh-dependencies
-
-</details>
-
-# Delete .gradle cache
-
-<details>rm -rf .gradle
-
-<summary><b>🤖 Models Not Found</b></summary>./gradlew build
-
-```
-
-```bash
-
-# Train models from scratch### Device Not Detected
-
-python ml_pipeline/train_models.py
-
-```bash
-
-# Or download pre-trained (if available)# Check ADB
-
-# Check releases pageadb devices
-
-```
-
-# Restart ADB server
-
-</details>adb kill-server
-
-adb start-server
+## 🐛 Troubleshooting
 
 <details>
-
-<summary><b>💾 Out of Memory</b></summary># Check USB debugging is enabled on device
-
-```
+<summary><b>Gradle Sync Failed</b></summary>
 
 ```bash
-
-# Increase Gradle heap size### Python Import Errors
-
-export GRADLE_OPTS="-Xmx4096m"
-
-./gradlew clean build```bash
-
-# Ensure virtual environment is activated
-
-# Or add to gradle.propertiessource venv/bin/activate  # Linux/Mac
-
-echo "org.gradle.jvmargs=-Xmx4096m" >> gradle.propertiesvenv\Scripts\activate     # Windows
-
+./gradlew clean
+./gradlew build --refresh-dependencies
 ```
+</details>
 
-# Reinstall dependencies
+<details>
+<summary><b>Device Not Detected</b></summary>
 
-</details>pip install --upgrade -r requirements.txt
-
+```bash
+adb devices
+adb kill-server
+adb start-server
 ```
+</details>
+
+<details>
+<summary><b>Python Import Errors</b></summary>
+
+```bash
+source venv/bin/activate
+pip install --upgrade -r requirements.txt
+```
+</details>
+
+<details>
+<summary><b>Out of Memory</b></summary>
+
+Add to `gradle.properties`:
+```properties
+org.gradle.jvmargs=-Xmx4096m
+org.gradle.daemon=true
+org.gradle.parallel=true
+```
+</details>
 
 ---
 
-### Models Not Found
+## 📊 Performance
 
-## 📊 Performance Metrics
+| Metric | Value |
+|--------|-------|
+| APK Size (Debug) | 15-20 MB |
+| APK Size (Release) | 10-15 MB |
+| Cold Start Time | < 2s |
+| Memory Usage | 50-80 MB |
+| ML Inference | < 100ms |
 
-```bash
-
-<div align="center"># Train models
-
-python ml_pipeline/train_models.py
-
-### ⚡ App Performance
-
-# Or check if models directory exists
-
-| Metric | Value | Status |ls ml_pipeline/models/
-
-|--------|-------|--------|```
-
-| 📦 APK Size (Debug) | 15-20 MB | 🟢 Optimal |
-
-| 📦 APK Size (Release) | 10-15 MB | 🟢 Excellent |### Build Too Slow
-
-| 🚀 Cold Start Time | < 2s | 🟢 Fast |
-
-| 💾 Memory Usage | 50-80 MB | 🟢 Efficient |Add to `gradle.properties`:
-
-| 🔋 Battery Impact | Low | 🟢 Optimized |```properties
-
-org.gradle.daemon=true
-
-### 🤖 ML Performanceorg.gradle.parallel=true
-
-org.gradle.caching=true
-
-| Model | Inference Time | Memory | Accuracy |org.gradle.jvmargs=-Xmx2048m
-
-|-------|---------------|---------|----------|```
-
-| Crop Recommendation | < 100ms | ~500 MB | 95.2% |
-
-| Soil Detection | < 50ms | ~40 MB | 92.1% |### Out of Memory During Build
-
-| Image Classification | < 200ms | ~120 MB | 89.5% |
-
-```bash
-
-</div># Increase heap size
-
-export GRADLE_OPTS="-Xmx4096m"
-
----./gradlew clean build
-
-```
+---
 
 ## 🗺️ Roadmap
 
+**Current (v1.1)** ✅
+- Core features, ML models, Weather system, Multi-language
+
+**Next (v1.2)** 🚧
+- Offline mode, Enhanced disease detection, Market prices, Push notifications
+
+**Future (v2.0)** 💡
+- Community forum, SMS access, Satellite imagery, Government API integration
+
 ---
 
-### 🎯 Current Version (v1.1.0)
+## 📄 License
 
-- ✅ Core features implemented## 📊 Performance Metrics
+This project is licensed under the MIT License - see [LICENSE](LICENSE) for details.
 
-- ✅ ML models integrated
+---
 
-- ✅ Weather system functional### App Performance
+## 🙏 Acknowledgments
 
-- ✅ Multi-language support- **APK Size**: ~15-20 MB (debug), ~10-15 MB (release)
-
-- **Min SDK**: API 21 (Android 5.0)
-
-### 🚀 Next Release (v1.2.0)- **Target SDK**: API 36 (Android 14+)
-
-- 🔄 Offline mode for all features- **Load Time**: < 2 seconds on modern devices
-
-- 📸 Enhanced crop disease detection
-
-- 📊 Market price predictions### ML Model Performance
-
-- 🔔 Smart push notifications- **Crop Recommendation**: 95.2% accuracy, <100ms prediction
-
-- **Soil Type Detection**: 92.1% accuracy, <50ms prediction
-
-### 🌟 Future Plans (v2.0.0+)- **Model Size**: 516 MB total (loaded on-demand)
-
-- 🌐 Community forum
-
-- 📱 SMS-based access---
-
-- 🛰️ Satellite imagery integration
-
-- 🤝 Government API integration## 🔐 Security & Privacy
-
-- 🎓 Training modules
-
-- 💰 Loan calculator- **Data Storage**: All user data stored locally in encrypted SQLite database
-
-- **API Keys**: Not hardcoded, use local configuration
-
----- **Permissions**: Only requests necessary permissions
-
-- **Privacy Policy**: No personal data shared without consent
-
-## 📱 Screenshots & Demo
+- **Smart India Hackathon 2025** - Project opportunity
+- **OpenWeatherMap** - Weather data API
+- **scikit-learn** - ML framework
+- **Android Community** - Libraries and support
 
 ---
 
 <div align="center">
 
-## 📱 Supported Devices
+## 📞 Contact
 
-### 📸 Coming Soon!
-
-- **Minimum**: Android 5.0 (API 21)
-
-<p>- **Recommended**: Android 8.0+ (API 26+)
-
-  <img src="https://via.placeholder.com/250x500/4CAF50/FFFFFF?text=Dashboard" width="250" />- **Screen Sizes**: Phones and tablets (4" - 10"+)
-
-  <img src="https://via.placeholder.com/250x500/2196F3/FFFFFF?text=Weather" width="250" />- **Orientations**: Portrait and landscape
-
-  <img src="https://via.placeholder.com/250x500/9C27B0/FFFFFF?text=AI+Assistant" width="250" />- **Languages**: Hindi, English, Marathi, Gujarati, Punjabi, and more
-
-</p>
-
----
-
-<!-- Replace with actual screenshots -->
-
-<!-- ![Dashboard](screenshots/dashboard.gif) -->## 🗺️ Roadmap
-
-<!-- ![Weather](screenshots/weather.gif) -->
-
-<!-- ![AI Chat](screenshots/ai_chat.gif) -->- [ ] Offline mode for core features
-
-- [ ] Integration with government agricultural APIs
-
-</div>- [ ] Crop disease detection using image recognition
-
-- [ ] Market price tracking and predictions
-
----- [ ] Community forum for farmers
-
-- [ ] SMS-based feature access for low-end devices
-
-## 📄 License- [ ] Integration with weather satellites
-
-
-
-<div align="center">---
-
-
-
-### MIT License## 🙏 Acknowledgments
-
-
-
-```- **SIH 2025**: Smart India Hackathon project
-
-Copyright (c) 2025 FasalSathi Team- **OpenWeatherMap**: Weather data API
-
-- **scikit-learn**: ML framework
-
-Permission is hereby granted, free of charge, to any person obtaining a copy- **Android Community**: Libraries and tools
-
-of this software and associated documentation files (the "Software"), to deal- **Contributors**: All contributors to this project
-
-in the Software without restriction...
-
-```---
-
-
-
-See [LICENSE](LICENSE) file for full details.## 📄 License
-
-
-
-</div>This project is licensed under the MIT License - see the [LICENSE](LICENSE) file for details.
-
-
-
-------
-
-
-
-## 🙏 Acknowledgments## 📞 Contact & Support
-
-
-
-<div align="center">- **Repository**: [github.com/AnuranjanJain/FasalSathi](https://github.com/AnuranjanJain/FasalSathi)
-
-- **Issues**: [GitHub Issues](https://github.com/AnuranjanJain/FasalSathi/issues)
-
-| Organization | Contribution |- **Discussions**: [GitHub Discussions](https://github.com/AnuranjanJain/FasalSathi/discussions)
-
-|--------------|--------------|
-
-| 🏆 **Smart India Hackathon 2025** | Project opportunity |---
-
-| 🌐 **OpenWeatherMap** | Weather data API |
-
-| 🤖 **scikit-learn** | ML framework |## 📈 Project Status
-
-| 📱 **Android Community** | Libraries & support |
-
-| 👥 **Contributors** | Code & ideas |![GitHub last commit](https://img.shields.io/github/last-commit/AnuranjanJain/FasalSathi)
-
-![GitHub issues](https://img.shields.io/github/issues/AnuranjanJain/FasalSathi)
-
-</div>![GitHub pull requests](https://img.shields.io/github/issues-pr/AnuranjanJain/FasalSathi)
-
-
-
----**Status**: Active Development 🚀
-
-
-
-## 📞 Contact & Support---
-
-
-
-<div align="center"><p align="center">
-
-  Made with ❤️ for Indian Farmers 🌾
-
-### 💬 Get in Touch  <br>
-
-  <strong>FasalSathi - Your Farming Companion</strong>
-
-[![GitHub](https://img.shields.io/badge/GitHub-Repository-black?style=for-the-badge&logo=github)](https://github.com/AnuranjanJain/FasalSathi)</p>
-
+[![GitHub](https://img.shields.io/badge/GitHub-Repository-black?style=for-the-badge&logo=github)](https://github.com/AnuranjanJain/FasalSathi)
 [![Issues](https://img.shields.io/badge/Issues-Report_Bug-red?style=for-the-badge&logo=github)](https://github.com/AnuranjanJain/FasalSathi/issues)
-[![Discussions](https://img.shields.io/badge/Discussions-Ask_Question-blue?style=for-the-badge&logo=github)](https://github.com/AnuranjanJain/FasalSathi/discussions)
-
-### 📊 Project Stats
-
-![GitHub stars](https://img.shields.io/github/stars/AnuranjanJain/FasalSathi?style=social)
-![GitHub forks](https://img.shields.io/github/forks/AnuranjanJain/FasalSathi?style=social)
-![GitHub watchers](https://img.shields.io/github/watchers/AnuranjanJain/FasalSathi?style=social)
-
-![GitHub last commit](https://img.shields.io/github/last-commit/AnuranjanJain/FasalSathi?style=flat-square)
-![GitHub issues](https://img.shields.io/github/issues/AnuranjanJain/FasalSathi?style=flat-square)
-![GitHub pull requests](https://img.shields.io/github/issues-pr/AnuranjanJain/FasalSathi?style=flat-square)
+[![Discussions](https://img.shields.io/badge/Discussions-Join-blue?style=for-the-badge&logo=github)](https://github.com/AnuranjanJain/FasalSathi/discussions)
 
 ---
 
-### ⭐ Star us on GitHub!
-
-If you find this project helpful, please consider giving it a star ⭐
+### ⭐ Star us on GitHub if you find this helpful!
 
 ---
 
-<img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&weight=600&size=22&duration=3000&pause=1000&color=4CAF50&center=true&vCenter=true&width=600&lines=Made+with+%E2%9D%A4%EF%B8%8F+for+Indian+Farmers;FasalSathi+-+Your+Farming+Companion;Happy+Farming!+%F0%9F%8C%BE" alt="Footer" />
-
-</div>
-
----
-
-<div align="center">
+<img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&weight=600&size=20&duration=3000&pause=1000&color=4CAF50&center=true&vCenter=true&width=500&lines=Made+with+%E2%9D%A4%EF%B8%8F+for+Indian+Farmers;FasalSathi+-+Your+Farming+Companion;Happy+Farming!+🌾" alt="Footer" />
 
 **[⬆ Back to Top](#-fasalsathi)**
 
